push should include all tags of the image on teh build server

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -37,5 +37,5 @@ jobs:
 
       - run: |
           docker build app/ -t acrsemog6nncklkxhqd.azurecr.io/bind:${{ github.sha }} -t acrsemog6nncklkxhqd.azurecr.io/bind:latest
-          docker push acrsemog6nncklkxhqd.azurecr.io/bind:${{ github.sha }}
+          docker push acrsemog6nncklkxhqd.azurecr.io/bind --all-tags
 
