--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,8 @@
-FROM node:8.9.3-alpine
-RUN mkdir -p /usr/src/app
-COPY ./sample_app/ /usr/src/app/
-WORKDIR /usr/src/app
-RUN npm install
-CMD node /usr/src/app/index.js
+FROM alpine:latest
+# RUN mkdir -p /usr/src/app
+# COPY ./sample_app/ /usr/src/app/
+# WORKDIR /usr/src/app
+# RUN npm install
+# CMD node /usr/src/app/index.js
+RUN apk add bash
+CMD /bin/bash
